// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleXSheet.prototype.insert respects priorities 1`] = `
".first {}
.second {}
.third {}
.last {}"
`;

exports[`StyleXSheet.prototype.insert respects priority floats 1`] = `
".first {}
.second {}
.third {}
.fourth {}"
`;

exports[`inlines variables for older browsers 1`] = `
":root, .__fb-light-mode {
  --foo: bar;
}
.__fb-dark-mode:root, .__fb-dark-mode {
  --foo: reallydark;
}
.foo {color: bar}"
`;
